first draft of the pom.xml for the scifio-bundle creation (remaining problem: RegisterBuddy-entry in the manifest.mf)

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
   <modules>
     <module>org.knime.knip.scijava</module>
     <module>org.knime.knip.imglib2</module>
+    <module>org.knime.knip.scifio</module>
   </modules>
 
   <build>
