--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
           <instructions>
             <Embed-Dependency>*;scope=compile</Embed-Dependency>
             <Embed-Transitive>true</Embed-Transitive>
+	    <_include>MANIFEST.MF</_include>
             <Export-Package>${export.package}.*</Export-Package>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Bundle-RequiredExecutionEnvironment>JavaSE-1.6</Bundle-RequiredExecutionEnvironment>
