--- a/org.knime.knip.scifio/pom.xml
+++ b/org.knime.knip.scifio/pom.xml
@@ -37,6 +37,22 @@
     </dependency>
   </dependencies>
 
+<build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>2.4.0</version>
+        <configuration>
+          <instructions>
+            <Require-Bundle>org.knime.knip.scijava;bundle-version="${scijava-common.version}", org.knime.knip.imglib2;bundle-version="${imglib2.version}"</Require-Bundle>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+
 	<repositories>
 	<repository>
 	<id>imagej.public</id>
