--- a/org.knime.knip.scijava/pom.xml
+++ b/org.knime.knip.scijava/pom.xml
@@ -26,4 +26,21 @@
       <version>${scijava-common.version}</version>
     </dependency>
   </dependencies>
+
+
+<build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>2.4.0</version>
+        <configuration>
+          <instructions>           
+	    <Eclipse-BuddyPolicy>registered</Eclipse-BuddyPolicy>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
