Avoid embedding excluded dependencies in bundle:bundle
Formerly, we only excluded it when generating the manifest.

Noticed by Martin Horn.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,9 @@
                 <goals>
                   <goal>bundle</goal>
                 </goals>
+                <configuration>
+                  <excludeDependencies>${no-embed.dependencies}</excludeDependencies>
+                </configuration>
               </execution>
             </executions>
           </plugin>
