Require at least Maven 3
As figured out in
https://github.com/knime-ip/knip-scijava-bundles/commit/6c50cdf#commitcomment-5742074,
Maven 2 has problems excluding dependencies from the bundles. But
Maven 3 works.

Thanks, Martin Horn!

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
     <module>org.knime.knip.scifio-bf-compat</module>
   </modules>
 
+  <prerequisites>
+    <!-- excludes seem not to work correctly with older Maven -->
+    <maven>3.0.0</maven>
+  </prerequisites>
+
   <build>
     <plugins>
       <plugin>
