--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <description>A parent POM for the bundles wrapping SciJava and friends.</description>
 
   <properties>
-    <imglib2.version>2.0.0-knip-SNAPSHOT</imglib2.version>
+    <imglib2.version>2.0.0.knip-SNAPSHOT</imglib2.version>
   </properties>
 
   <modules>
