Specifiy extra bundle version for the imglib2-bundle (without letters as eclipse needs pure numbers as versions).

--- a/org.knime.knip.imglib2/pom.xml
+++ b/org.knime.knip.imglib2/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>org.knime.knip.imglib2</artifactId>
   <packaging>bundle</packaging>
   <name>ImgLib2 bundle</name>
-  <version>${imglib2.version}</version>
+  <version>${imglib2.bundle.version}</version>
 
   <description>This bundle provides an implementation of the ImgLib2 framework.</description>
 
