--- a/org.knime.knip.scifio-bf-compat/pom.xml
+++ b/org.knime.knip.scifio-bf-compat/pom.xml
@@ -37,7 +37,7 @@
         <version>2.4.0</version>
         <configuration>
           <instructions>
-            <Require-Bundle>org.knime.knip.scijava;bundle-version="${scijava-common.version}", org.knime.knip.scifio;bundle-version="${scifio.version}".org.knime.knip.imglib2;bundle-version="${imglib2.version}"</Require-Bundle>
+            <Require-Bundle>org.knime.knip.scijava;bundle-version="${scijava-common.version}", org.knime.knip.scifio;bundle-version="${scifio.version}".org.knime.knip.imglib2;bundle-version="${imglib2.bundle.version}"</Require-Bundle>
 	    <Eclipse-RegisterBuddy>org.knime.knip.scijava</Eclipse-RegisterBuddy>
           </instructions>
         </configuration>
