Correct naming for the source bundle jar-file.

--- a/org.knime.knip.scijava/pom.xml
+++ b/org.knime.knip.scijava/pom.xml
@@ -46,6 +46,8 @@
               <descriptors>
                 <descriptor>sources.xml</descriptor>
               </descriptors>
+	    <finalName>org.knime.knip.scijava.sources-${scijava-common.version}</finalName>
+	    <appendAssemblyId>false</appendAssemblyId>
             </configuration>
           </execution>
         </executions>
