WIP: binaries and sources are new sub-modules which in turn the projects as sub-modules itself; not all sources added, yet

--- a/binaries/org.knime.knip.imglib2/pom.xml
+++ b/binaries/org.knime.knip.imglib2/pom.xml
@@ -4,7 +4,7 @@
 
   <parent>
     <groupId>org.knime.knip</groupId>
-    <artifactId>org.knime.knip.pom-scijava</artifactId>
+    <artifactId>org.knime.knip.pom-scijava-binaries</artifactId>
     <version>1.149</version>
   </parent>
 
