--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.knime.knip</groupId>
     <artifactId>org.knime.knip.pom-scijava</artifactId>
-    <version>1.149</version>
-    <relativePath/>
+    <version>1.0</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>org.knime.knip</groupId>
   <artifactId>org.knime.knip.pom-scijava-sources</artifactId>
-  <version>1.149</version>
+  <version>1.0</version>
   <packaging>pom</packaging>
   <name>KNIME/SciJava sources parent</name>
   <description>A parent POM for the sources bundles wrapping SciJava and friends.</description>
