--- a/binaries/org.knime.knip.scifio-bf-compat/pom.xml
+++ b/binaries/org.knime.knip.scifio-bf-compat/pom.xml
@@ -5,7 +5,8 @@
   <parent>
     <groupId>org.knime.knip</groupId>
     <artifactId>org.knime.knip.pom-scijava-binaries</artifactId>
-    <version>1.149</version>
+    <version>1.0</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>org.knime.knip.scifio-bf-compat</artifactId>
