--- a/binaries/org.knime.knip.scijava/pom.xml
+++ b/binaries/org.knime.knip.scijava/pom.xml
@@ -4,7 +4,8 @@
   <parent>
     <groupId>org.knime.knip</groupId>
     <artifactId>org.knime.knip.pom-scijava-binaries</artifactId>
-    <version>1.149</version>
+    <version>1.0</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>org.knime.knip.scijava</artifactId>
   <packaging>bundle</packaging>
@@ -17,7 +18,7 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>${scijava-common.groupId}</groupId>
+      <groupId>org.scijava</groupId>
       <artifactId>scijava-common</artifactId>
       <version>${scijava-common.version}</version>
     </dependency>
