Specify to not import any packages specifically for imglib

--- a/binaries/org.knime.knip.imglib2/pom.xml
+++ b/binaries/org.knime.knip.imglib2/pom.xml
@@ -72,6 +72,7 @@
         <configuration>
           <instructions>
             <Require-Bundle>org.knime.knip.scijava;bundle-version="${scijava-common.version}"</Require-Bundle>
+            <Import-Package>!*</Import-Package>
           </instructions>
         </configuration>
       </plugin>
