--- a/org.knime.knip.scifio/pom.xml
+++ b/org.knime.knip.scifio/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.knime.knip</groupId>
     <artifactId>org.knime.knip.pom-scijava</artifactId>
-    <version>1.149</version>
+    <version>1.0</version>
   </parent>
 
   <artifactId>org.knime.knip.scifio</artifactId>
@@ -22,9 +22,8 @@
 
   <dependencies>  
     <dependency>
-      <groupId>${scifio.groupId}</groupId>
+      <groupId>io.scif</groupId>
       <artifactId>scifio</artifactId>
-      <version>${scifio.version}</version>	
     </dependency>
   </dependencies>
 
