--- a/org.knime.knip.imglib2/pom.xml
+++ b/org.knime.knip.imglib2/pom.xml
@@ -58,6 +58,12 @@
     	<groupId>net.imglib2</groupId>
     	<artifactId>imglib2-algorithm-fft</artifactId>
     </dependency>
+
+    <dependency>
+		<groupId>com.yuvimasory</groupId>
+		<artifactId>orange-extensions</artifactId>
+		<version>1.3.0</version>
+	</dependency>
   </dependencies>
 
   <build>
