--- a/org.knime.knip.imglib2/pom.xml
+++ b/org.knime.knip.imglib2/pom.xml
@@ -1,4 +1,5 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -19,12 +20,12 @@
     <no-embed.dependencies>org.knime.knip.scijava,scijava-common</no-embed.dependencies>
     <export.package>net.imglib2</export.package>
   </properties>
-  
+
   <repositories>
-	<repository>
-	<id>imagej.public</id>
-	<url>http://maven.imagej.net/content/groups/public</url>
-	</repository>
+    <repository>
+      <id>imagej.public</id>
+      <url>http://maven.imagej.net/content/groups/public</url>
+    </repository>
   </repositories>
 
   <dependencies>
@@ -44,26 +45,29 @@
       <groupId>net.imglib2</groupId>
       <artifactId>imglib2-realtransform</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>org.knime.knip</groupId>
       <artifactId>org.knime.knip.scijava</artifactId>
       <version>${scijava-common.version}</version>
     </dependency>
     <dependency>
-    	<groupId>net.imglib2</groupId>
-    	<artifactId>imglib2-roi</artifactId>
+      <groupId>net.imglib2</groupId>
+      <artifactId>imglib2-roi</artifactId>
     </dependency>
     <dependency>
-    	<groupId>net.imglib2</groupId>
-    	<artifactId>imglib2-algorithm-fft</artifactId>
+      <groupId>net.imglib2</groupId>
+      <artifactId>imglib2-algorithm-fft</artifactId>
     </dependency>
 
     <dependency>
-		<groupId>com.yuvimasory</groupId>
-		<artifactId>orange-extensions</artifactId>
-		<version>1.3.0</version>
-	</dependency>
+      <groupId>com.yuvimasory</groupId>
+      <artifactId>orange-extensions</artifactId>
+      <version>1.3.0</version>
+    </dependency>
+
+
+
   </dependencies>
 
   <build>
