--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
             <Embed-Dependency>*;scope=compile</Embed-Dependency>
             <Embed-Transitive>true</Embed-Transitive>
             <Export-Package>${export.package}.*</Export-Package>
+            <Import-Package></Import-Package>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Bundle-RequiredExecutionEnvironment>JavaSE-1.6</Bundle-RequiredExecutionEnvironment>
           </instructions>
