Fix eclipse m2e detection
Thank you @ctrueden for mentioning this on #5.

--- a/pom.xml
+++ b/pom.xml
@@ -102,9 +102,9 @@
     <profile>
       <id>importable-projects</id>
       <activation>
-        <file>
-          <exists>${basedir}/.project</exists>
-        </file>
+        <property>
+          <name>m2e.version</name>
+        </property>
       </activation>
       <build>
         <plugins>
