--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-eclipse-plugin</artifactId>
+            <version>2.9</version>
             <executions>
               <execution>
                 <id>configure-eclipse</id>
