--- a/org.knime.knip.scifio-bf-compat/pom.xml
+++ b/org.knime.knip.scifio-bf-compat/pom.xml
@@ -33,7 +33,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.4.0</version>
+        <version>${felix-plugin.version}</version>
         <configuration>
           <instructions>
             <Require-Bundle>org.knime.knip.scijava;bundle-version="${scijava-common.version}",
