--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 
   <properties>
     <scijava.enforce.skip />
+    <felix-plugin.version>2.5.0</felix-plugin.version>
   </properties>
 
   <prerequisites>
@@ -39,7 +40,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.4.0</version>
+        <version>${felix-plugin.version}</version>
         <extensions>true</extensions>
         <configuration>
           <supportedProjectTypes>
@@ -108,6 +109,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
+        <version>${felix-plugin.version}</version>
         <executions>
           <execution>
             <id>make-manifest</id>
