--- a/org.knime.knip.scifio/pom.xml
+++ b/org.knime.knip.scifio/pom.xml
@@ -17,8 +17,8 @@
   <description>This bundle provides an implementation of the SCIFIO library.</description>
 
   <properties>
-    <no-embed.dependencies>imglib2, imglib2-meta,scijava-common</no-embed.dependencies>
-    <export.package>io.scif</export.package>
+    <no-embed.dependencies>org.knime.knip.imglib2, imglib2, org.knime.knip.scijava, scijava-common</no-embed.dependencies>
+    <export.packages>io.scif.*</export.packages>
   </properties>
 
   <dependencies>
@@ -27,6 +27,7 @@
       <artifactId>scifio</artifactId>
     </dependency>
   </dependencies>
+  
 
   <build>
     <plugins>
@@ -44,12 +45,4 @@
       </plugin>
     </plugins>
   </build>
-
-
-  <repositories>
-    <repository>
-      <id>imagej.public</id>
-      <url>http://maven.imagej.net/content/groups/public</url>
-    </repository>
-  </repositories>
 </project>
