--- a/org.knime.knip.imglib2/pom.xml
+++ b/org.knime.knip.imglib2/pom.xml
@@ -17,8 +17,8 @@
   <description>This bundle provides an implementation of the ImgLib2 framework.</description>
 
   <properties>
-    <no-embed.dependencies>org.knime.knip.scijava,scijava-common</no-embed.dependencies>
-    <export.package>net.imglib2</export.package>
+    <no-embed.dependencies>org.knime.knip.scijava, scijava-common</no-embed.dependencies>
+    <export.packages>net.imglib2.*, Jama.*</export.packages>
   </properties>
 
   <repositories>
@@ -39,18 +39,9 @@
     </dependency>
     <dependency>
       <groupId>net.imglib2</groupId>
-      <artifactId>imglib2-algorithm-gpl</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>net.imglib2</groupId>
       <artifactId>imglib2-realtransform</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.knime.knip</groupId>
-      <artifactId>org.knime.knip.scijava</artifactId>
-      <version>${scijava-common.version}</version>
-    </dependency>
     <dependency>
       <groupId>net.imglib2</groupId>
       <artifactId>imglib2-roi</artifactId>
@@ -60,14 +51,6 @@
       <artifactId>imglib2-algorithm-fft</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>com.yuvimasory</groupId>
-      <artifactId>orange-extensions</artifactId>
-      <version>1.3.0</version>
-    </dependency>
-
-
-
   </dependencies>
 
   <build>
@@ -75,10 +58,11 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-         <extensions>true</extensions>
+        <extensions>true</extensions>
         <configuration>
           <instructions>
             <Require-Bundle>org.knime.knip.scijava;bundle-version="${scijava-common.version}"</Require-Bundle>
+            <Eclipse-RegisterBuddy>org.knime.knip.scijava</Eclipse-RegisterBuddy>
           </instructions>
         </configuration>
       </plugin>
