Export contents instead of packages
When using export packages and embedding jars, the exported classes will
be copied (as in having and unpacked and packed version) into the resulting
bundle jar. The solution is _exportcontents

--- a/org.knime.knip.scijava/pom.xml
+++ b/org.knime.knip.scijava/pom.xml
@@ -17,7 +17,7 @@
   <description>This bundle provides an implementation of the SciJava-Common framework.</description>
 
   <properties>
-    <export.packages>org.scijava.*, org.bushe.swing.event.*</export.packages>
+    <export.contents>org.scijava.*, org.bushe.swing.event.*</export.contents>
   </properties>
 
   <dependencies>
